--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   },
   "dependencies": {
     "@vitejs/plugin-react": "^1.3.0",
-    "@zxing/browser": "^0.1.5",
-    "@zxing/library": "^0.21.1",
+    "html5-qrcode": "^2.3.4",
     "antd": "^5.26.7",
     "axios": "^1.11.0",
     "dayjs": "^1.11.13",
