--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
   },
   "dependencies": {
     "@vitejs/plugin-react": "^1.3.0",
-    "html5-qrcode": "^2.3.4",
+    "@zxing/browser": "^0.1.5",
+    "@zxing/library": "^0.21.3",
     "antd": "^5.26.7",
     "axios": "^1.11.0",
     "dayjs": "^1.11.13",
     "framer-motion": "^12.23.12",
+    "html5-qrcode": "^2.3.4",
     "jsbarcode": "^3.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-responsive": "^10.0.1",
     "react-router-dom": "^7.7.1",
+    "react-zxing": "^2.1.0",
     "recharts": "^3.1.2",
     "xlsx": "^0.18.5"
   },
@@ -28,7 +31,7 @@
     "@eslint/js": "^8.12.0",
     "@types/react": "^17.0.52",
     "@types/react-dom": "^17.0.17",
-    "eslint": "^7.32.0",
+    "eslint": "^8.40.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "globals": "^13.0.0",
